applications/opengauss-ccs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: opengauss-ccs
spec:
  clusterIP: None
  ports:
    - name: 
      port: 80
      targetPort: 9761
  selector:
    server: ccs-eureka
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-nodeport
  namespace: opengauss-ccs
spec:
  type: NodePort
  ports:
  - name: server
    port: 80
    targetPort: 9761
    nodePort: 32111
  selector:
    server: ccs-eureka
---
apiVersion: v1
kind: Service
metadata:
  name: opengauss-ccs-config-service
  namespace: opengauss-ccs
spec:
  clusterIP: None
  ports:
    - name:
      port: 80
      targetPort: 8087
  selector:
    server: ccs-config
---
apiVersion: v1
kind: Service
metadata:
  name: opengauss-ccs-gateway-service
  namespace: opengauss-ccs
spec:
  clusterIP: None
  ports:
    - name:
      port: 80
      targetPort: 8088
  selector:
    server: ccs-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: opengauss-ccs-service
  namespace: opengauss-ccs
spec:
  clusterIP: None
  ports:
    - name:
      port: 80
      protocol: TCP
      targetPort: 8086
  selector:
    server: ccs-server
