applications/opengauss-ccs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/custom-http-errors: "400,500"
  name: opengauss-ccs-ingress
spec:
  tls:
    - hosts:
        - ccs.opengauss.org
      secretName: opengauss-ccs-secret
  rules:
    - host: ccs.opengauss.org
      http:
        paths:
          - backend:
              serviceName: opengauss-ccs-gateway-service
              servicePort: 80
            path: /
